--- a/Angular5/package.json
+++ b/Angular5/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "ngx-jsonapi": "^1.0.0-rc.10",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
