--- a/Angular5/package.json
+++ b/Angular5/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@auth0/angular-jwt": "^1.1.0",
     "angular-bootstrap-md": "^5.2.3",
     "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
