--- a/Angular5/package.json
+++ b/Angular5/package.json
@@ -23,11 +23,11 @@
     "@angular/router": "^5.2.0",
     "@auth0/angular-jwt": "^1.1.0",
     "angular-bootstrap-md": "^5.2.3",
+    "angular2-jsonapi": "^5.0.0",
     "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "ngx-jsonapi": "^1.0.0-rc.10",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
