--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
     "redux-promise-middleware": "^6.1.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "use-deep-compare-effect": "^1.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
