--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/lab": "^4.0.0-alpha.50",
     "@material-ui/pickers": "^3.2.10",
     "axios": "^0.19.0",
+    "copy-to-clipboard": "^3.3.1",
     "date-fns": "^2.12.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -37,6 +38,7 @@
   ],
   "devDependencies": {
     "eslint": "^6.8.0",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "redux-logger": "^3.0.6"
   }
 }
