--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "copy-to-clipboard": "^3.3.1",
     "date-fns": "^2.16.1",
     "material-table": "^1.69.1",
+    "material-ui-color": "^0.4.6",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-redux": "^7.2.1",
@@ -19,7 +20,6 @@
     "react-scripts": "^3.4.4",
     "redux": "^4.0.5",
     "redux-promise-middleware": "^6.1.0",
-    "redux-thunk": "^2.3.0",
     "use-deep-compare-effect": "^1.4.0"
   },
   "scripts": {
